--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <title>Telegram User Bot</title>
+  <title>Cuba Currencies</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
   <script src="/socket.io/socket.io.js"></script>
   <link rel="icon" type="image/x-icon" href="../public/10103-robot-face-icon.png">
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <h1>Telegram Userbot</h1>
+    <h1>Cuba Currencies Prices</h1>
     <p id="header-text"></p>
   </header>
   <main>
@@ -21,12 +21,23 @@
       <input aria-label="input code" id="input" type="number" placeholder="code" required />
       <input aria-label="submit button" type="submit" value="Submit" />
     </form>
-    <div id="main">
-      <p></p>
-      <div id="chart"><canvas id="myChart" style="width:100%;max-width:700px"></canvas></div>
-    </div> 
     <button id="1d" class="btn-down">1D</button>
     <button id="7d">7D</button>
+    <div class="main">
+      <p>Usdt</p>
+      <div class="chart"><canvas id="usdtChart" style="width:100%;max-width:700px"></canvas></div>
+      
+    </div> 
+    <div class="main">
+      <p>USD</p>
+      <div class="chart"><canvas id="usdChart" style="width:100%;max-width:700px"></canvas></div>
+      
+    </div>
+    <div class="main">
+      <p>MLC</p>
+      <div class="chart"><canvas id="mlcChart" style="width:100%;max-width:700px"></canvas></div>
+    </div>
+    
   </main>  
   <footer>
 
